Changes to handle graphics formats that can't be handled directly by Prince or by pdf- and XeTeX. Some cleanup is still needed, but I want to get this saved so I can bring the changes over to Windows.

--- a/layout/mathml/content/src/mathml.css
+++ b/layout/mathml/content/src/mathml.css
@@ -53,7 +53,7 @@ math {
   unicode-bidi: embed;
   display: inline;
   font-style: normal;
-  font-family: MathJax_Main, Asana Math, XITS math, Symbol, DejaVu Sans, Cambria Math, serif;
+  font-family: MathJax_Main, XITS math, Symbol, DejaVu Sans, Cambria Math, serif;
   text-rendering: optimizeLegibility;
   -moz-float-edge: margin-box;
 }
