--- a/prince/base/skin/classic/toolbarsOverlay.css
+++ b/prince/base/skin/classic/toolbarsOverlay.css
@@ -5,6 +5,7 @@
 
 toolbar[printpreview="true"] {
   -moz-binding: url("chrome://global/content/printPreviewBindings.xml#printpreviewtoolbar");
+  height: 50px;
 }
 
 #evalButton {
