--- a/prince/base/skin/modern/toolbarsOverlay.css
+++ b/prince/base/skin/modern/toolbarsOverlay.css
@@ -4,6 +4,7 @@
 
 toolbar[printpreview="true"] {
   -moz-binding: url("chrome://global/content/printPreviewBindings.xml#printpreviewtoolbar");
+  height: 50px;
 }
 
 #evalButton {
