--- a/prince/res/css/beamer.css
+++ b/prince/res/css/beamer.css
@@ -6,6 +6,64 @@ frametitle, framesubtitle, institute {
   -moz-user-select: text;
 }
 
+author {
+  text-align: center;
+  font-weight: normal;
+  color: rgb(9, 62, 125);
+  display: block;
+  padding-top: 10pt;
+}
+
+authorid {
+  display: none;
+}
+
+body[showshort='true'] authorid {
+  display: inline;
+  color: rgb(128, 181, 247);
+}
+
+body[showshort='true'] authorid:before {
+  content: '[';
+  display: inline;
+  color: rgb(128, 181, 247);
+}
+
+body[showshort='true'] authorid:after {
+  content: '] ';
+  display: inline;
+  color: rgb(128, 181, 247);
+}
+
+institute {
+  display:block;
+  text-align: center;
+  font-weight: normal;
+  color: rgb(9, 62, 125);
+  -moz-binding: url("chrome://prince/content/bindings/beamer.xml#fmtag-institute");
+}
+
+instituteid {
+  display: none;
+}
+
+body[showshort='true'] instituteid {
+  display: inline;
+  color: rgb(128, 181, 247);
+}
+
+body[showshort='true'] instituteid:before {
+  content: '[';
+  display: inline;
+  color: rgb(128, 181, 247);
+}
+
+body[showshort='true'] instituteid:after {
+  content: '] ';
+  display: inline;
+  color: rgb(128, 181, 247);
+}
+
 beamerframe {
   display: block;
   position: relative;
