Beamer front matter elements.

--- a/prince/res/css/beamer.css
+++ b/prince/res/css/beamer.css
@@ -35,6 +35,65 @@ body[showshort='true'] authorid:after {
   color: rgb(128, 181, 247);
 }
 
+subtitle {
+  text-align: center;
+  font-weight: normal;
+  color: rgb(9, 62, 125);
+  display: block;
+  padding-top: 10pt;
+  -moz-binding: url("chrome://prince/content/bindings/beamer.xml#fmtag-subtitle");
+}
+
+subtitleid {
+  display: none;
+}
+
+body[showshort='true'] subtitleid {
+  display: inline;
+  color: rgb(128, 181, 247);
+}
+
+body[showshort='true'] subtitleid:before {
+  content: '[';
+  display: inline;
+  color: rgb(128, 181, 247);
+}
+
+body[showshort='true'] subtitleid:after {
+  content: '] ';
+  display: inline;
+  color: rgb(128, 181, 247);
+}
+
+date {
+  text-align: center;
+  font-weight: normal;
+  color: rgb(9, 62, 125);
+  display: block;
+  padding-top: 10pt;
+}
+
+option {
+  display: none;
+}
+
+body[showshort='true'] option {
+  display: inline;
+  color: rgb(128, 181, 247);
+}
+
+body[showshort='true'] option:before {
+  content: '[';
+  display: inline;
+  color: rgb(128, 181, 247);
+}
+
+body[showshort='true'] option:after {
+  content: '] ';
+  display: inline;
+  color: rgb(128, 181, 247);
+}
+
 institute {
   display:block;
   text-align: center;
@@ -62,6 +121,22 @@ body[showshort='true'] instituteid:after {
   content: '] ';
   display: inline;
   color: rgb(128, 181, 247);
+}
+
+subject {
+  display:block;
+  text-align: center;
+  font-weight: normal;
+  color: rgb(9, 62, 125);
+  -moz-binding: url("chrome://prince/content/bindings/beamer.xml#fmtag-subject");
+}
+
+keywords {
+  display:block;
+  text-align: center;
+  font-weight: normal;
+  color: rgb(9, 62, 125);
+  -moz-binding: url("chrome://prince/content/bindings/beamer.xml#fmtag-keywords");
 }
 
 beamerframe {
