Now plots when they are created use many more preferences than height, width, and units, which was the case until now.

--- a/prince/res/css/latex.css
+++ b/prince/res/css/latex.css
@@ -197,7 +197,7 @@ hspace[type="nonBreakingSpace"] {
 }
 
 mml|maligngroup:before {
-  visibility: none;
+  visibility: hidden;
 }
 
 body[showinvis="true"] mml|maligngroup:before {
