A period snuck in to replace a comma. Caught it!

--- a/prince/res/css/baselatex.css
+++ b/prince/res/css/baselatex.css
@@ -37,7 +37,7 @@ verbatim bodyText {
 }
 numberedListItem, 
 bulletListItem,
-descriptionListItem.
+descriptionListItem,
 bibitem {
        margin-left: 2em;
        padding-left: 1em;
