Fixed the display CSS rule for misrule.

--- a/prince/res/css/latex_internal.css
+++ b/prince/res/css/latex_internal.css
@@ -80,8 +80,8 @@ rulebox {
   white-space: pre;
 }
 
-span.msirule {
-  display: block;
+msirule, span.msirule {
+  display: inline-block;
   overflow: hidden;
 }
 
