Last night when I was going to sleep I realized that by putting the front matter buttons at the end of the line, the behavior when backspacing from the front of the author's name looks natural.

--- a/prince/res/css/latex.css
+++ b/prince/res/css/latex.css
@@ -730,7 +730,7 @@ preface {
 
 button[class="frontmattertag"] {
   position: absolute;
-  left: 5px;
+  right: 5px;
   font-family: sans-serif;
   font-style: normal;
   opacity: 0.7;
