--- a/prince/base/skin/modern/aboutDialog.css
+++ b/prince/base/skin/modern/aboutDialog.css
@@ -1,5 +1,15 @@
 /* Copyright (c) 2004 MacKichan Software, Inc.  All Rights Reserved. */
 
+body {
+  font-family: san-serif;
+}
+
+iframe {
+  width: 4in;
+  height: 6in;
+  overflow-y: hidden;
+}
+
 #aboutDialog {
   padding: 0px 0px 10px 0px;
 }
