--- a/prince/base/skin/classic/toolbarsOverlay.css
+++ b/prince/base/skin/classic/toolbarsOverlay.css
@@ -3,6 +3,10 @@
 
 @namespace url("http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul");
 
+#PreviewModeButton[disabled="true"] {
+  color: gray;
+}
+
 toolbar[printpreview="true"] {
   -moz-binding: url("chrome://global/content/printPreviewBindings.xml#printpreviewtoolbar");
   height: 50px;
