--- a/prince/res/css/baselatex.css
+++ b/prince/res/css/baselatex.css
@@ -556,6 +556,7 @@ body[showshort='true'] shortTitle:after {
 msiframe {
   display: block;
   overflow: hidden;
+  text-align: center;
   text-indent: 0;
 }
 
