Cleanup and preventing the display of screenshots of plots in the normal view.

--- a/prince/helpfiles/locale/en-us/css/baselatex.css
+++ b/prince/helpfiles/locale/en-us/css/baselatex.css
@@ -7,7 +7,7 @@ object[msigraph="true"] {display:none;}
 }
 
 @media screen {
-  plotwrapper object[msisnap] { display:none;}
+  object[msisnap] { display:none;}
 }
 
 /* This section gives the default colors for a range 
