--- a/prince/res/css/baselatex.css
+++ b/prince/res/css/baselatex.css
@@ -1,7 +1,7 @@
 @namespace mml url("http://www.w3.org/1998/Math/MathML");
 
 @media screen {
-  plotwrapper object[msisnap] { display:none;}
+  object[msisnap] { display:none;}
 }
 /* Print-only rules. We put them here where they are noticeable. */
 @media print {
