Improved appearance of footnotes when displayed. ---------------- Improved cursor movement at the end of a document. ---------------- Made two minor fixes to fix problems with Babel. ---------------- Backed out a change to taglistmanager that may cause a crash due to ref counting.
Collapsed above changes

--- a/prince/res/css/baselatex.css
+++ b/prince/res/css/baselatex.css
@@ -238,8 +238,8 @@ bulletLabel {
 /* show footnotes by default*/
 note[type="footnote"], note[type="footnote"][hide="false"] {
   display: block;
-  float: none;
-  width: 90%;
+  float: right;
+  width: 100%;
   font-size: small;
 }
 
